fixes text-align when centering cells on tables

--- a/public/stylesheets/tweaks/CSS/tweaks.css
+++ b/public/stylesheets/tweaks/CSS/tweaks.css
@@ -199,6 +199,7 @@
   justify-content: center !important;
   margin-left: auto !important;
   margin-right: auto !important;
+  text-align: center !important;
 }
 .--nst_tweak-rounded-table-checkboxes .notion-table-view .notion-collection-item [style*='padding: 8px;'] {
   padding: 0 !important;
